improve tests coverage for the extractor module

--- a/backend/extractor/testdata/podcast-369.html
+++ b/backend/extractor/testdata/podcast-369.html
@@ -89,6 +89,7 @@
 
     <div class="article__content">
       <p><img src="https://podcast.umputun.com/images/uwp/uwp369.jpg" alt="" /></p>
+      <p><img src="http://user^:passwo^rd@foo.com/" alt="wrong url for test to mess up absolute link parser" /></p>
 
 <ul>
 <li>Нагло ходил в гости.<br /></li>
