--- a/frontend/dev/blocks/footer/footer.html
+++ b/frontend/dev/blocks/footer/footer.html
@@ -1,3 +1,3 @@
 <div class="footer wrapper page__footer">
-	<a href="#" class="link footer__copyright">uReadability</a>, <script>document.write((new Date()).getFullYear());</script>
+	<a href="#" class="link footer__copyright">uReadability</a>, <script>document.write((new Date()).getFullYear().toString());</script>
 </div>
