--- a/backend/web/index.html
+++ b/backend/web/index.html
@@ -6,22 +6,13 @@
 	
 	<title>uReadability</title>
 
-	<script>
-		var login = localStorage.getItem('login'),
-			pass = localStorage.getItem('password');
+	<link rel="shortcut icon" type="image/png" href="/favicon.png">
 
-		if (! (login && pass)) {
-			location.href = '/login/?back=' + location.href;
-		}
-	</script>
-	
-	<link rel="shortcut icon" type="image/png" href="/files/favicon.png">
-
-	<link rel="stylesheet" href="/css/main.css">
+	<link rel="stylesheet" href="/main.css">
 
 	<script src="https://code.jquery.com/jquery-4.0.0-beta.min.js"></script>
 
-	<script src="/js/main.js"></script>
+	<script src="/main.js"></script>
 </head>
 <body class="page">
 	
