--- a/backend/web/index.html
+++ b/backend/web/index.html
@@ -1,51 +1,52 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>uReadability</title>
+  <title>uReadability</title>
 
-	<link rel="shortcut icon" type="image/png" href="/favicon.png">
+  <link rel="shortcut icon" type="image/png" href="/favicon.png">
 
-	<link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="/main.css">
 
-	<script src="/main.js"></script>
+  <script src="/main.js"></script>
 </head>
 <body class="page">
 
-	<div class="header wrapper page__header">
-	<a href="/" class="header__title link">uReadability</a>
-	<ul class="menu header__menu">
-		<li class="menu__item menu__item_right"><a href="#logout" id="logout" class="link">Выйти</a></li>
-	</ul>
+<div class="header wrapper page__header">
+  <a href="/" class="header__title link">uReadability</a>
+  <ul class="menu header__menu">
+    <li class="menu__item menu__item_right"><a href="#logout" id="logout" class="link">Выйти</a></li>
+  </ul>
 </div>
 
-	<div class="wrapper">
-		<div class="rules">
-			<table class="rules__table">
-				<thead>
-					<tr>
-						<th>Домен</th>
-						<th>Контент</th>
-						<th>Активность</th>
-					</tr>
-				</thead>
-				<tbody id="rules__list">
-				</tbody>
-				<tfoot>
-					<tr>
-						<td colspan="3" class="rules__add">
-							<a href="/add/" class="link">Добавить</a>
-						</td>
-					</tr>
-				</tfoot>
-			</table>
-		</div>
-	</div>
+<div class="wrapper">
+  <div class="rules">
+    <table class="rules__table">
+      <thead>
+      <tr>
+        <th>Домен</th>
+        <th>Контент</th>
+        <th>Активность</th>
+      </tr>
+      </thead>
+      <tbody id="rules__list">
+      </tbody>
+      <tfoot>
+      <tr>
+        <td colspan="3" class="rules__add">
+          <a href="/add/" class="link">Добавить</a>
+        </td>
+      </tr>
+      </tfoot>
+    </table>
+  </div>
+</div>
 
-	<div class="footer wrapper page__footer">
-	<a href="#" class="link footer__copyright">uReadability</a>, <script>document.write((new Date()).getFullYear().toString());</script>
+<div class="footer wrapper page__footer">
+  <a href="#" class="link footer__copyright">uReadability</a>,
+  <script>document.write((new Date()).getFullYear().toString());</script>
 </div>
 </body>
 </html>
