--- a/backend/web/add/index.html
+++ b/backend/web/add/index.html
@@ -10,6 +10,12 @@
       if (!(localStorage.getItem('login') && localStorage.getItem('password'))) {
           location.href = '/login/?back=' + location.href;
       }
+      document.addEventListener('DOMContentLoaded', function () {
+          // Change title and header only if the path contains '/edit/'
+          if (window.location.pathname.includes('/edit/')) {
+              document.querySelector('title').textContent = 'Редактирование правила — uReadability';
+          }
+      });
   </script>
 
   <link rel="shortcut icon" type="image/png" href="/favicon.png">
